php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #43606 missing module dependencies in exif extension
Submitted: 2007-12-16 02:45 UTC Modified: 2007-12-16 17:15 UTC
From: crrodriguez at suse dot de Assigned:
Status: Closed Package: EXIF related
PHP Version: 5.3CVS-2007-12-16 (CVS) OS: Irrelevant
Private report: No CVE-ID: None
 [2007-12-16 02:45 UTC] crrodriguez at suse dot de
Description:
------------
exif extension lacks of module dependencies

Reproduce code:
---------------
./configure --enable-exif --enable-mbstring

Expected result:
----------------
./sapi/cli/php --re exif

- Dependencies {
    Dependency [ standard (Required) ]
    Dependency [ mbstring (Required) ] ( in case --enable-mbstring is passed to configure of course)
  }


Actual result:
--------------
- no module deps

fix : 

http://www.flyspray.org/patches/exif-module-deps.patch



Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2007-12-16 17:15 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC