MFB: Fixed bug #43606 (define missing depencies of the exif extension)